Closed
Bug 824460
Opened 8 years ago
Closed 8 years ago
clang/libc++ build fails in netwerk/ipc/RemoteOpenFileParent.cpp
Categories
(Core :: Networking: JAR, defect)
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: jbeich, Assigned: jbeich)
References
Details
Attachments
(1 file)
787 bytes,
patch
|
jduell.mcbugs
:
review+
bajaj
:
approval-mozilla-aurora+
bajaj
:
approval-mozilla-b2g18+
|
Details | Diff | Splinter Review |
To build with libc++ add -stdlib=libc++ to CXXFLAGS. netwerk/ipc/RemoteOpenFileParent.cpp:32:5: error: use of undeclared identifier 'close' close(mFd); ^ 1 error generated.
Attachment #695456 -
Flags: review?(jduell.mcbugs)
Comment 2•8 years ago
|
||
Comment on attachment 695456 [details] [diff] [review] add missing include from close(2) manpage Review of attachment 695456 [details] [diff] [review]: ----------------------------------------------------------------- Thanks for fixing this--for some reason the version of clang on my mac didn't need the extra #include. I assume we don't need the CXXFLAGS fix mentioned in comment 0, just the #include, right? This should land on aurora/b2g18--else we'll break those trees for clang.
Attachment #695456 -
Flags: review?(jduell.mcbugs)
Attachment #695456 -
Flags: review+
Attachment #695456 -
Flags: approval-mozilla-b2g18?
Attachment #695456 -
Flags: approval-mozilla-aurora?
(In reply to Jason Duell (:jduell) from comment #2) > Thanks for fixing this--for some reason the version of clang on my mac > didn't need the extra #include. I have no clue where OS X stands but FreeBSD certainly moves towards having libc++ used/linked by default. At the moment FreeBSD 10 still uses old libstdc++ (still under GPLv2) by default but you only need to add -stdlib=libc++ to CXXFLAGS to use libc++. http://wiki.freebsd.org/NewC%2B%2BStack http://lists.freebsd.org/pipermail/freebsd-toolchain/2012-September/000558.html http://svnweb.freebsd.org/base?view=revision&revision=240966 # libc++ is built by default with clang http://svnweb.freebsd.org/base?view=revision&revision=242624 # clang became default in FreeBSD 10 > > I assume we don't need the CXXFLAGS fix mentioned in comment 0, just the > #include, right? Just the include. clang/libc++ is one receipt to reproduce the error. Another is probably using more recent gcc/libstdc++ e.g., netwerk/ipc/RemoteOpenFileParent.cpp: In destructor 'virtual mozilla::net::RemoteOpenFileParent::~RemoteOpenFileParent()': netwerk/ipc/RemoteOpenFileParent.cpp:33:14: error: 'close' was not declared in this scope > > This should land on aurora/b2g18--else we'll break those trees for clang. Thanks. I need it on Aurora to have one patch less in FreeBSD ports tree when firefox 19.0 is released.
Keywords: checkin-needed
Comment 4•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/6b81175079c5
Assignee: nobody → jbeich
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/6b81175079c5
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Comment 6•8 years ago
|
||
Comment on attachment 695456 [details] [diff] [review] add missing include from close(2) manpage Approving as the patch just involves adding the missing #include & will help avoid breaking those(aurora/b2g18) trees
Attachment #695456 -
Flags: approval-mozilla-b2g18?
Attachment #695456 -
Flags: approval-mozilla-b2g18+
Attachment #695456 -
Flags: approval-mozilla-aurora?
Attachment #695456 -
Flags: approval-mozilla-aurora+
![]() |
||
Updated•8 years ago
|
Keywords: checkin-needed
Comment 7•8 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/211bef449e27 https://hg.mozilla.org/releases/mozilla-b2g18/rev/a023be91aae8
status-b2g18:
--- → fixed
status-firefox19:
--- → fixed
status-firefox20:
--- → fixed
Keywords: checkin-needed
You need to log in
before you can comment on or make changes to this bug.
Description
•