Bug 824460 - Unbreak build with clang/libc++ after bug 815523. r=jduell